--- a/src/css/setting/vars.css
+++ b/src/css/setting/vars.css
@@ -1,9 +1,9 @@
 :root {
-    --mainEng-font: "Orbitron";
+    --mainEng-font: "SUIT-Light";
     --mainKor-font: "Nanum Gothic Coding";
     --mainNum-font: "gmarket";
  
-    --mainBg-color: #dff3ffff;    
+    --mainBg-color: #a5baef;    
     --subBg100: #c2e7ff;    
     --subBg200: #7fcfffff;  
     --subBg300: #5ab3f0ff;  
@@ -32,14 +32,15 @@
 
 }
 
-@media screen and(max-width:768px) {
+@media screen and (max-width:768px) {
     :root {
         font-size: 14px;
 
     }
 
-    body {
+    
+}
+body {
         color: var(--black);
         background-color: var(--mainBg-color);
     }
-}
