--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,10 +4,10 @@
 @import url(setting/fonts.css);
 @import url(setting/vars.css);
 
-/* section */
-/* @import url(section/header.css);
 @import url(section/intro.css);
-@import url(section/project.css);
+/* section */
+ @import url(section/header.css);
+/*@import url(section/project.css);
 @import url(section/work.css);
 @import url(section/graphics.css);
 @import url(section/about.css);
