--- a/src/css/setting/vars.css
+++ b/src/css/setting/vars.css
@@ -1,9 +1,9 @@
 :root {
-    --mainEng-font: "SUIT-Light";
+    --mainEng-font: "SUIT";
     --mainKor-font: "Nanum Gothic Coding";
     --mainNum-font: "gmarket";
  
-    --mainBg-color: #a5baef;    
+    --mainBg-color: #7AA3B5;    
     --subBg100: #c2e7ff;    
     --subBg200: #7fcfffff;  
     --subBg300: #5ab3f0ff;  
