--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,9 +6,12 @@
 
 @import url(section/intro.css);
 /* section */
- @import url(section/header.css);
-/*@import url(section/project.css);
+@import url(section/header.css);
+@import url(section/project.css);
 @import url(section/work.css);
 @import url(section/graphics.css);
-@import url(section/about.css);
+/*@import url(section/about.css);
   */
+  #graphics, #about{
+    height: 100vh;
+  }
