--- a/src/css/section/intro.css
+++ b/src/css/section/intro.css
@@ -25,13 +25,15 @@
 .intro_text {
     width: 100%;
     height: 50vh;
-    background-color: var(--black);
+    background-color: var(--mainBg-color);
     color: var(--white);
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     position: relative;
+    right: 10px;
+    bottom: 10px;
 }
 
 .intro_text .text {
@@ -52,14 +54,16 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    width: 960px;
-    height: 502px;
+    width: 75vw;
+    max-width: 960px;
+    max-height: 502px;
+    height: 30vw;
+    margin: auto;
     overflow: hidden;
     filter: grayscale(100%);
     opacity: 0;
     background: url(../../img/diving.png);
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 3900%;
 }
 
 .intro_text:hover .text {
@@ -112,6 +116,13 @@
 .intro_lines.bottom .line:nth-child(7) {
     height: 1px;
 }
+
+/* @media screen and (min-width:483px) {
+    .intro_text .img {
+        width: 200px;
+        background-size: cover;
+    }
+} */
 
 @media screen and (max-width:768px) {
     .intro_lines.bottom .line {
